assets/css/output.css
/* ... */
@media (min-width: 768px) {
  .md\:sl-container {
    position: relative;
    z-index: 1;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    max-width: 540px;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }

  @media (min-width: 640px) {
    .md\:sl-container {
      padding-left: 1rem;
      padding-right: 1rem;
    }
  }

  @media (min-width: 768px) {
    .md\:sl-container {
      max-width: 960px;
    }
  }

  @media (min-width: 1280px) {
    .md\:sl-container {
      max-width: 1170px;
    }
  }

  .md\:absolute {
    position: absolute;
  }

  .md\:relative {
    position: relative;
  }

  .md\:top-\[78\%\] {
    top: 78%;
  }

  .md\:m-0 {
    margin: 0px;
  }

  .md\:ml-0 {
    margin-left: 0px;
  }

  .md\:mt-0 {
    margin-top: 0px;
  }

  .md\:mb-20 {
    margin-bottom: 5rem;
  }

  .md\:mt-5 {
    margin-top: 1.25rem;
  }

  .md\:mt-10 {
    margin-top: 2.5rem;
  }

  .md\:mb-0 {
    margin-bottom: 0px;
  }

  .md\:mt-4 {
    margin-top: 1rem;
  }

  .md\:block {
    display: block;
  }

  .md\:flex {
    display: flex;
  }

  .md\:grid {
    display: grid;
  }

  .md\:hidden {
    display: none;
  }

  .md\:h-full {
    height: 100%;
  }

  .md\:h-\[120\%\] {
    height: 120%;
  }

  .md\:w-full {
    width: 100%;
  }

  .md\:w-5\/6 {
    width: 83.333333%;
  }

  .md\:w-\[80\%\] {
    width: 80%;
  }

  .md\:w-\[120\%\] {
    width: 120%;
  }

  .md\:w-\[200\%\] {
    width: 200%;
  }

  .md\:max-w-\[960px\] {
    max-width: 960px;
  }

  .md\:basis-2\/3 {
    flex-basis: 66.666667%;
  }

  .md\:basis-1\/3 {
    flex-basis: 33.333333%;
  }

  .md\:basis-\[55\%\] {
    flex-basis: 55%;
  }

  .md\:basis-\[70\%\] {
    flex-basis: 70%;
  }

  .md\:basis-\[30\%\] {
    flex-basis: 30%;
  }

  .md\:basis-\[45\%\] {
    flex-basis: 45%;
  }

  .md\:basis-1\/5 {
    flex-basis: 20%;
  }

  .md\:basis-5\/12 {
    flex-basis: 41.666667%;
  }

  .md\:basis-7\/12 {
    flex-basis: 58.333333%;
  }

  .md\:basis-1\/4 {
    flex-basis: 25%;
  }

  .md\:basis-1\/2 {
    flex-basis: 50%;
  }

  .md\:grid-cols-3 {
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }

  .md\:grid-cols-7 {
    grid-template-columns: repeat(7, minmax(0, 1fr));
  }

  .md\:grid-cols-2 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .md\:grid-cols-4 {
    grid-template-columns: repeat(4, minmax(0, 1fr));
  }

  .md\:grid-cols-1 {
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }

  .md\:flex-row {
    flex-direction: row;
  }

  .md\:flex-col {
    flex-direction: column;
  }

  .md\:items-start {
    align-items: flex-start;
  }

  .md\:justify-between {
    justify-content: space-between;
  }

  .md\:gap-10 {
    gap: 2.5rem;
  }

  .md\:gap-5 {
    gap: 1.25rem;
  }

  .md\:gap-x-8 {
    -moz-column-gap: 2rem;
         column-gap: 2rem;
  }

  .md\:gap-y-1 {
    row-gap: 0.25rem;
  }

  .md\:gap-x-5 {
    -moz-column-gap: 1.25rem;
         column-gap: 1.25rem;
  }

  .md\:border-r {
    border-right-width: 1px;
  }

  .md\:bg-cover {
    background-size: cover;
  }

  .md\:p-5 {
    padding: 1.25rem;
  }

  .md\:p-4 {
    padding: 1rem;
  }

  .md\:p-8 {
    padding: 2rem;
  }

  .md\:px-4 {
    padding-left: 1rem;
    padding-right: 1rem;
  }

  .md\:px-8 {
    padding-left: 2rem;
    padding-right: 2rem;
  }

  .md\:py-10 {
    padding-top: 2.5rem;
    padding-bottom: 2.5rem;
  }

  .md\:px-6 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }

  .md\:pt-\[2rem\] {
    padding-top: 2rem;
  }

  .md\:pr-4 {
    padding-right: 1rem;
  }

  .md\:pl-4 {
    padding-left: 1rem;
  }

  .md\:text-left {
    text-align: left;
  }

  .md\:text-center {
    text-align: center;
  }

  .md\:text-\[2\.5rem\] {
    font-size: 2.5rem;
  }

  .md\:text-\[2rem\] {
    font-size: 2rem;
  }

  .md\:text-\[1\.5rem\] {
    font-size: 1.5rem;
  }

  .md\:text-\[2\.125rem\] {
    font-size: 2.125rem;
  }

  .md\:text-xs {
    font-size: 0.75rem;
    line-height: 1rem;
  }

  .md\:text-\[0\.875rem\] {
    font-size: 0.875rem;
  }

  .md\:text-\[2\.1875rem\] {
    font-size: 2.1875rem;
  }

  .md\:text-3xl {
    font-size: 1.875rem;
    line-height: 2.25rem;
  }

  .md\:text-2xl {
    font-size: 1.5rem;
    line-height: 2rem;
  }

  .md\:text-xl {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }

  .md\:text-lg {
    font-size: 1.125rem;
    line-height: 1.75rem;
  }

  .md\:text-\[20px\] {
    font-size: 20px;
  }

  .md\:text-\[22px\] {
    font-size: 22px;
  }

  .md\:text-\[1\.375rem\] {
    font-size: 1.375rem;
  }

  .md\:text-\[24px\] {
    font-size: 24px;
  }

  .md\:font-normal {
    font-weight: 400;
  }

  .md\:leading-\[2\.5rem\] {
    line-height: 2.5rem;
  }
}
/* ... */

